Issue #3467763: Fix exceeding Video size screen boundaries in CKEditor when adding a video or remote video Overlapping issues of video’s cover image with the CKEditor 5 toolbar

--- a/scss/theme/varbase-video-player.ckeditor.admin.scss
+++ b/scss/theme/varbase-video-player.ckeditor.admin.scss
@@ -1,4 +1,4 @@
-
+// Manager the look and feel of Varbase Video Player while working with the CKEditor.
 .ck-widget {
   .media {
 
@@ -68,5 +68,11 @@
         }
       }
     }
+  }
+}
+
+.ck {
+  .drupal-media {
+    z-index: 1;
   }
 }
